# gql

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gql/: error.h  error_codes.h  gql_export.h  rewrite.h
include/gql/ast/: algorithm.h  print.h
include/gql/ast/detail/: enumerate_children.h  value_ptr.h
include/gql/ast/nodes/: common.h  expression.h  node.h  path_patterns.h  statements.h  types.h  types_comparison.h
include/gql/ast/print/: common.h  expression.h  expression_parens_helpers.h  expression_wrappers.h  generic.h  output_stream.h  path_patterns.h  pgq.h  statements.h  types.h
include/gql/parser/: parser.h
include/gql/standard/: features.h
include/gql/syntax_analyzer/: ast_node_base.h  syntax_analyzer.h
jar/: README.md
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  input_positions_test.cpp  input_positions_test.h
src/common/: CMakeLists.txt  error.cpp  features.cpp
src/demo/: CMakeLists.txt  binding_table.cpp  binding_table.h  data_modifying.cpp  demo.cpp  demo.h  error.cpp  error.h  gql_program.cpp  graph.cpp  graph.h  graph_pattern.cpp  graph_pattern_context.h  graph_pattern_planner.cpp  graph_pattern_planner.h  main.cpp  op_sequence.cpp  op_sequence.h  operators.cpp  operators.h  predicate.cpp  query.cpp  search_context.cpp  search_context.h  timeout_watchdog.cpp  timeout_watchdog.h  value.h  value_expression.cpp
src/demo/helpers/: check_label_expression.cpp  check_label_expression.h  directional_iterator.h  path_mode_scope.cpp  path_mode_scope.h  scope_exit.h  split_path_union_by_variable.cpp  split_path_union_by_variable.h  split_path_union_by_variable_test.cpp  table_to_json.cpp  table_to_json.h  variable_bindings_scope.cpp  variable_bindings_scope.h
src/parser/: CMakeLists.txt  ast_builder.cpp  ast_builder.h  parse_file_test.cpp  parser.cpp  parser_test.cpp  parser_unittest.cpp  traverse_expression_unittest.cpp  unescape_string.cpp  unescape_string.h
src/parser/antlr4_runtime/: CMakeLists.txt
src/parser/test_data/: pgq.gql
src/rewrite/: CMakeLists.txt  element_patterns.cpp  exists_predicate.cpp  helpers.h  path_pattern_prefix.cpp  rewrite_unittest.cpp  simplified_path_pattern.cpp
src/syntax_analyzer/: catalog_modifying.cpp  data_modifying.cpp  gql_program.cpp  graph_pattern.cpp  graph_pattern_test.cpp  match.cpp  path_pattern.cpp  procedure.cpp  query.cpp  result.cpp  select.cpp  select_test.cpp  syntax_analyzer.cpp  syntax_analyzer.h  syntax_analyzer_file_test.cpp  test_helpers.cpp  type_helpers.cpp  type_helpers.h  value_expression.cpp  value_type.cpp
